# LibTorch20

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.ixx
